# my_ocb

./: .gitignore  Demo_OCB_EDITO_Modellab.ipynb  README.md  env.yaml
.dvc/: config
.github/workflows/: dc_ose_2021.yaml  dc_ose_2021_metrics.yaml
datachallenges/: README.md
datachallenges/dc_ose_2021/: README.md  datachallenge.toml  dvc.yaml  env.yaml  full_config.yaml  methods.yaml  pipelines.txt  pyproject.toml  report.md  stage_configs.yaml  workflow_repro_all.yaml
datachallenges/dc_ose_2021/data/: .gitignore
datachallenges/dc_ose_2021/data/metrics/: .gitignore  lambdax_4dvarnet.json  lambdax_duacs.json  mu_4dvarnet.json  mu_duacs.json  psd_4dvarnet.nc
datachallenges/dc_ose_2021/data/prepared/: .gitignore
datachallenges/dc_ose_2021/data/prepared/input/: .gitignore
datachallenges/dc_ose_2021/dc_ose_2021_pipelines/: __init__.py  compute_metrics.py  dl_inference_data.py  dl_input_data.py
datachallenges/dc_ose_2021/scripts/: format_metrics.py  wrap_yaml.py
modules/alongtrack_lambdax/: alongtrack_lambdax.py  pyproject.toml  script.py
modules/dz_alongtrack_mu/: dz_alongtrack_mu.py  pyproject.toml
modules/dz_download_ssh_tracks/: dz_download_ssh_tracks.py  pyproject.toml
modules/qf_filter_merge_daily_ssh_tracks/: pyproject.toml  qf_filter_merge_daily_ssh_tracks.py
modules/qf_hydra_recipes/: pyproject.toml  qf_hydra_recipes.py  qf_run_recipe.py
modules/qf_interp_grid_on_track/: pyproject.toml  qf_interp_grid_on_track.py
modules/qf_module/: pyproject.toml  qf_module.py
modules/qf_pipeline/: pyproject.toml  qf_pipeline.py
modules/qf_simple_chaining/: pyproject.toml  qf_simple_chaining.py
modules/ssh_tracks_loading/: pyproject.toml  script.py  ssh_tracks_loading.py
notebooks/: README.md
pipelines/alongtrack_lambdax_from_map/: alongtrack_lambdax_from_map.py
pipelines/qf_alongtrack_lambdax_from_map/: pyproject.toml  qf_alongtrack_lambdax_from_map.py
pipelines/qf_alongtrack_metrics_from_map/: pyproject.toml  qf_alongtrack_metrics_from_map.py
pipelines/qf_download_altimetry_constellation/: pyproject.toml  qf_download_altimetry_constellation.py
scripts/: README.md  demo_alongtrack_lambdax_from_grid.py
templates/: README.md
templates/module/: cookiecutter.json
templates/module/{{cookiecutter.project_slug}}/: pyproject.toml  {{cookiecutter.project_slug}}.py
templates/pipeline/: cookiecutter.json
templates/pipeline/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
wip/: demo_global.py  demo_pipeline.py  grid_chain.py  my_predict.py
