[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "dc_ose_2021"
authors=[
  {name = "Quentin Febvre", email = "quentin.febvre@gmail.com"},
]
[project.urls]
Repository="https://github.com/quentinf00/my_ocb.git"

[project.scripts]
dc_ose_2021-inference_data = "dc_ose_2021_pipelines.dl_inference_data:inference_data_pipeline"
dc_ose_2021-metrics = "dc_ose_2021_pipelines.compute_metrics:alongtrack_metrics_pipeline"

[tool.setuptools.packages.find]
include = ["dc_ose_2021_pipelines*"]
