[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "dc_ose_2021"
authors=[
  {name = "Quentin Febvre", email = "quentin.febvre@gmail.com"},
]
[project.urls]
Repository="https://github.com/quentinf00/my_ocb.git"

[project.scripts]
dc_ose_2021-inference_data = "dc_ose_2021_pipelines.dl_inference_data:pipeline [dl_track]"
dc_ose_2021-metrics = "dc_ose_2021_pipelines.compute_metrics:pipeline [dl_track,metrics]"

[project.optional-dependencies]
dl_tracks = []
metrics = []


[tool.setuptools]
packages=["dc_ose_2021_pipelines"]

