[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "qf_hydra_recipes"
authors=[
  {name = "Quentin Febvre", email = "quentin.febvre@gmail.com"},
]
[project.urls]
Repository="https://github.com/quentinf00/my_ocb.git"

[project.scripts]
qf_run.grid = "qf_recipes:qf_grid_fn"
qf_run.concat = "qf_recipes:qf_concat_fn"

[tool.setuptools]
py-modules=["qf_hydra_recipes", "qf_run_recipe"]
