[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "qf_alongtrack_lambdax_from_map"
authors=[
  {name = "Quentin Febvre", email = "quentin.febvre@gmail.com"},
]
dependencies = [
  "qf_interp_grid_on_track @ git+https://github.com/quentinf00/my_ocb.git#egg=qf_interp_grid_on_track&subdirectory=modules/qf_interp_grid_on_track",
  "ssh_tracks_loading @ git+https://github.com/quentinf00/my_ocb.git#egg=ssh_tracks_loading&subdirectory=modules/ssh_tracks_loading",
  "alongtrack_lambdax @ git+https://github.com/quentinf00/my_ocb.git#egg=alongtrack_lambdax&subdirectory=modules/alongtrack_lambdax",
]

[project.urls]
Repository="https://github.com/quentinf00/my_ocb.git"

[project.scripts]
qf_alongtrack_lambdax_from_map = "qf_alongtrack_lambdax_from_map:api_endpoint"

[tool.setuptools]
py-modules=["qf_alongtrack_lambdax_from_map"]
