[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "qf_download_altimetry_constellation"
authors=[
  {name = "Quentin Febvre", email = "quentin.febvre@gmail.com"},
]
dependencies = [
  "dz_download_ssh_tracks @ git+https://github.com/quentinf00/my_ocb.git#egg=dz_download_ssh_tracks&subdirectory=modules/dz_download_ssh_tracks",
]

[project.urls]
Repository="https://github.com/quentinf00/my_ocb.git"

[project.scripts]
qf_alongtrack_metrics_from_map = "qf_download_altimetry_constellation:api_endpoint"

[tool.setuptools]
py-modules=["qf_download_altimetry_constellation"]
